; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/mtu3/extr_mtu3_gadget.c_mtu3_gadget_get_frame.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/mtu3/extr_mtu3_gadget.c_mtu3_gadget_get_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_gadget = type { i32 }
%struct.mtu3 = type { i32 }

@U3D_USB20_FRAME_NUM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_gadget*)* @mtu3_gadget_get_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mtu3_gadget_get_frame(%struct.usb_gadget* %0) #0 {
  %2 = alloca %struct.usb_gadget*, align 8
  %3 = alloca %struct.mtu3*, align 8
  store %struct.usb_gadget* %0, %struct.usb_gadget** %2, align 8
  %4 = load %struct.usb_gadget*, %struct.usb_gadget** %2, align 8
  %5 = call %struct.mtu3* @gadget_to_mtu3(%struct.usb_gadget* %4)
  store %struct.mtu3* %5, %struct.mtu3** %3, align 8
  %6 = load %struct.mtu3*, %struct.mtu3** %3, align 8
  %7 = getelementptr inbounds %struct.mtu3, %struct.mtu3* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @U3D_USB20_FRAME_NUM, align 4
  %10 = call i64 @mtu3_readl(i32 %8, i32 %9)
  %11 = trunc i64 %10 to i32
  ret i32 %11
}

declare dso_local %struct.mtu3* @gadget_to_mtu3(%struct.usb_gadget*) #1

declare dso_local i64 @mtu3_readl(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
